# HireLens

./: .gitignore  ARCHITECTURE_NOTE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  configs.py  health.py  jobs.py  resumes.py
backend/core/: config.py
backend/db/: __init__.py  configs.py  connection.py  jobs.py  resumes.py  schema.sql  screenings.py
backend/parsers/: __init__.py  docx_parser.py  pdf_parser.py  text_cleaner.py
backend/services/llm/: __init__.py  client.py  embedder.py  extractor.py  ranker.py  scorer.py
backend/services/storage/: __init__.py  client.py
backend/services/tasks/: __init__.py  reparse.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: package.json
frontend/src/app/: Hero.tsx  Navbar.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/candidates/: page.tsx
frontend/src/app/dashboard/config/: page.tsx
frontend/src/app/dashboard/jobs/[id]/: page.tsx
frontend/src/app/dashboard/upload/: page.tsx
frontend/src/components/: DashboardPreview.tsx  FeaturesSection.tsx  InternalFooter.tsx  LandingHeader.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
