[project]
name = "hirelens-backend"
version = "0.1.0"
description = "HireLens — AI-powered resume screening backend"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "asyncpg>=0.31.0",
    "cloudinary>=1.44.1",
    "fastapi>=0.135.2",
    "google-genai>=1.68.0",
    "mammoth>=1.12.0",
    "pdfplumber>=0.11.9",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.27.2.2",
    "pytest>=9.0.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]
